--- a/css/style.css
+++ b/css/style.css
@@ -259,3 +259,7 @@ h1, h2, h3, h4, h5, h6 {
     box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
   }
 }
+
+.no-scroll {
+  overflow: hidden !important;
+}
